--- a/bsconfig.json
+++ b/bsconfig.json
@@ -8,7 +8,7 @@
     "src",
     "examples"
   ],
-  "namespaces": true,
+  "namespace": true,
   "bs-dependencies" : [
       // add your dependencies here. You'd usually install them normally through `npm install my-dependency`. If my-dependency has a bsconfig.json too, then everything will work seamlessly.
   ]
