--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
-  "name": "foo",
+  "name": "bs-d3",
   "version": "0.1.0",
   "scripts": {
+    "bundle-examples": "webpack --context examples --config examples/webpack.config.js",
     "clean": "bsb -clean-world",
     "build": "bsb -make-world",
     "watch": "bsb -make-world -w"
@@ -11,7 +12,8 @@
   ],
   "license": "MIT",
   "devDependencies": {
-    "bs-platform": "1.8.2"
+    "bs-platform": "1.8.2",
+    "webpack": "3.5.6"
   },
   "dependencies": {
     "d3": "4.10.0"
