Turn on super errors

--- a/bsconfig.json
+++ b/bsconfig.json
@@ -9,6 +9,7 @@
     "examples"
   ],
   "namespace": true,
+  "bsc-flags": ["-bs-super-errors"],
   "bs-dependencies" : [
       // add your dependencies here. You'd usually install them normally through `npm install my-dependency`. If my-dependency has a bsconfig.json too, then everything will work seamlessly.
   ]
