--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "scripts": {
     "bundle-examples": "webpack --context examples --config examples/webpack.config.js",
+    "bundle-analyze": "ANALYZE_BUNDLE=1 npm run bundle-examples",
     "clean": "bsb -clean-world",
     "build": "bsb -make-world",
     "watch": "bsb -make-world -w"
@@ -13,7 +14,8 @@
   "license": "MIT",
   "devDependencies": {
     "bs-platform": "1.8.2",
-    "webpack": "3.5.6"
+    "webpack": "3.5.6",
+    "webpack-bundle-analyzer": "2.9.0"
   },
   "dependencies": {
     "d3": "4.10.0"
