--- a/bsconfig.json
+++ b/bsconfig.json
@@ -12,5 +12,6 @@
   "bsc-flags": ["-bs-super-errors"],
   "bs-dependencies" : [
       // add your dependencies here. You'd usually install them normally through `npm install my-dependency`. If my-dependency has a bsconfig.json too, then everything will work seamlessly.
-  ]
+  ],
+  "refmt": 3
 }
