--- a/package.json
+++ b/package.json
@@ -22,11 +22,12 @@
   ],
   "license": "MIT",
   "devDependencies": {
-    "bs-platform": "2.1.0",
-    "webpack": "3.5.6",
-    "webpack-bundle-analyzer": "2.9.0"
+    "bs-platform": "2.2.3",
+    "webpack": "4.5.0",
+    "webpack-bundle-analyzer": "2.11.1",
+    "webpack-cli": "2.0.14"
   },
   "dependencies": {
-    "d3": "4.10.0"
+    "d3": "5.0.0"
   }
 }
