--- a/bsconfig.json
+++ b/bsconfig.json
@@ -9,7 +9,7 @@
     {"dir":"examples"},
     {"dir":"__tests__", "type": "dev"}
   ],
-  "namespace": true,
+  "namespace": false,
   "bsc-flags": ["-bs-super-errors"],
   "bs-dependencies" : [
       // add your dependencies here. You'd usually install them normally through `npm install my-dependency`. If my-dependency has a bsconfig.json too, then everything will work seamlessly.
