--- a/bsconfig.json
+++ b/bsconfig.json
@@ -5,13 +5,15 @@
   "version": "0.1.0",
   "package-specs": ["commonjs", "es6"],
   "sources": [
-    "src",
-    "examples"
+    {"dir":"src"},
+    {"dir":"examples"},
+    {"dir":"__tests__", "type": "dev"}
   ],
   "namespace": true,
   "bsc-flags": ["-bs-super-errors"],
   "bs-dependencies" : [
       // add your dependencies here. You'd usually install them normally through `npm install my-dependency`. If my-dependency has a bsconfig.json too, then everything will work seamlessly.
   ],
+  "bs-dev-dependencies": ["@glennsl/bs-jest"],
   "refmt": 3
 }
