--- a/package.json
+++ b/package.json
@@ -3,14 +3,14 @@
   "description": "Experimental d3 5.x bindings for BuckleScript",
   "version": "0.1.0",
   "scripts": {
-    "bundle-examples": "webpack --context examples --config examples/webpack.config.js",
     "bundle-analyze": "ANALYZE_BUNDLE=1 npm run bundle-examples",
     "clean": "bsb -clean-world",
     "build": "bsb -make-world",
     "start": "bsb -make-world -w",
     "pretest": "bsb -make-world",
     "test": "jest --watchAll",
-    "test-ci": "npm run pretest && jest"
+    "test-ci": "npm run pretest && jest",
+    "webpack": "webpack -w --mode development --context examples --config examples/webpack.config.js"
   },
   "homepage": "https://github.com/af/bs-d3",
   "repository": "https://github.com/af/bs-d3",
@@ -25,16 +25,16 @@
   ],
   "license": "MIT",
   "devDependencies": {
-    "@glennsl/bs-jest": "^0.4.2",
-    "bs-platform": "3.0.0",
-    "jest": "^22.4.3",
-    "jsdom": "^11.10.0",
-    "webpack": "4.5.0",
+    "@glennsl/bs-jest": "0.4.2",
+    "bs-platform": "3.1.4",
+    "jest": "22.4.3",
+    "jsdom": "11.10.0",
+    "webpack": "4.9.1",
     "webpack-bundle-analyzer": "2.11.1",
-    "webpack-cli": "2.0.14"
+    "webpack-cli": "2.1.4"
   },
   "dependencies": {
-    "d3": "5.1.0"
+    "d3": "5.4.0"
   },
   "jest": {
     "testRegex": "/js/__tests__/.*_test\\.js$"
